[FIX] Fixed a lot of small spacing issues. Adjusted nav, hero, modal

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
-    height: 500px;
+    height: 400px;
     background-size: 700px 500px;
-    background-color: #477516;
+    background-color: #72964c;//477516
     background-position: top center;
     background-attachment: fixed;
     background-blend-mode: soft-light;
@@ -11,11 +11,7 @@
     @include tablet {
         background-position: left;
         background-size: cover;
-        height: 400px;
-    }
-
-    @include desktop {
-        height: 700px;
+        height: 500px;
     }
 
     &__content {
@@ -26,6 +22,7 @@
         padding: 0 2rem 7rem 0;
         width: 100%;
         height: 100%;
+        text-shadow: 2px 2px 2px rgba(7, 85, 13, 0.2);
 
         & h1 {
             color: #fff;
